wrap content in header element

--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 </head>
 <body>
     <header>
-      My First Git Test Project
+      <p>My First Git Test Project</p>
     </header>
     <main>
       This is the main area of my web page.
     </main>
+    <footer>
+       © 2021 Web Design Technologies Incorporated
+    </footer>
 </body>
 </html>
